--- a/ui/index.html
+++ b/ui/index.html
@@ -112,7 +112,7 @@
 
       <!-- Capsules + Actions -->
       <div class="mb-3 flex items-center justify-between gap-3">
-        <div id="capsules" class="hidden sm:flex items-center gap-3"></div>
+        <div id="capsules" class="hidden sm:flex flex-wrap items-center gap-3"></div>
         <div class="cmdbar" role="group" aria-label="Reports and downloads">
   <button id="btn-dl-posku" class="cmd cmd--ghost" aria-label="PO × SKU Discrepancy" title="Compare planned vs applied at PO×SKU level">
     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" aria-hidden="true" focusable="false">
