--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
   <style>
     body{background:#f8fafc;color:#111827}
     .vo-nav{position:sticky;top:0;z-index:40;background:#fff;border-bottom:1px solid #eee}
-    .container{max-width:none;width:min(96vw,1920px);margin:0 auto;padding:16px 24px}
+    .vo-wrap{
+  max-width:none;
+  width:min(96vw,1920px);
+  margin:0 auto;
+  padding:16px 24px;
+  box-sizing:border-box;
+}
+
+#page-dashboard .cmdbar, #capsules{ min-width:0; flex-wrap:wrap; }
+
     .dot{width:.6rem;height:.6rem;border-radius:9999px;display:inline-block}
     .heartbeat{animation:heartbeat 1.2s ease-in-out infinite;transform-origin:center}
     @keyframes heartbeat{0%{transform:scale(1)}15%{transform:scale(1.18)}30%{transform:scale(1)}45%{transform:scale(1.12)}60%{transform:scale(1)}100%{transform:scale(1)}}
@@ -31,11 +40,16 @@
     .wkcap .bar{height:6px;border-radius:9999px;background:#e5e7eb;overflow:hidden;margin-top:4px}
     .wkcap .bar>div{height:6px;border-radius:9999px;background:#990033;width:0%}
 
-/* Hard guard: stack cards in normal block flow, full width */
-#page-dashboard { display:block; }
-#page-dashboard > * { width:100%; max-width:100%; margin-bottom:.75rem; }
-/* prevent child content (tables/grids) from forcing extra width */
-#page-dashboard > * { min-width:0; }
+/* Respect .hidden; only style when visible */
+#page-dashboard:not(.hidden){ display:block; }
+#page-dashboard:not(.hidden) > *{
+  position:relative;
+  display:block;
+  width:100%;
+  max-width:100%;
+  min-width:0;
+  margin-bottom:.75rem;
+}
 
 /* segmented toggle visuals */
 .seg { color:#9f1239; }
@@ -74,7 +88,7 @@
 <body class="bg-gray-50 min-h-screen">
   <!-- Top Nav -->
   <header class="vo-nav">
-    <div class="container py-3 flex items-center justify-between">
+    <div class="vo-wrap py-3 flex items-center justify-between">
       <div class="flex items-center gap-3">
         <div class="text-xl font-semibold">VelOzity Pinpoint</div>
         <div id="vo-today" class="text-gray-500 text-sm"></div>
@@ -92,7 +106,7 @@
     </div>
   </header>
 
-  <main class="container py-4">
+  <main class="vo-wrap py-4">
     <!-- ================= Operations ================= -->
     <section id="page-dashboard" class="hidden">
       <div class="flex items-center justify-between mb-2 basis-full w-full">
