--- a/ui/index.html
+++ b/ui/index.html
@@ -2058,5 +2058,8 @@ document.getElementById('btn-delete-uids')?.addEventListener('click', deleteUIDs
 })();
 
   </script>
+
+<script src="/js/exec_live_additive.js?v=1" defer></script>
+
 </body>
 </html>
