--- a/index.html
+++ b/index.html
@@ -2059,7 +2059,7 @@ document.getElementById('btn-delete-uids')?.addEventListener('click', deleteUIDs
 
   </script>
 
-<script src="/js/exec_live_additive.js?v=1" defer></script>
+<script src="/ui/js/exec_live_additive.js?v=2" defer></script>
 
 </body>
 </html>
