--- a/index.html
+++ b/index.html
@@ -2059,7 +2059,7 @@ document.getElementById('btn-delete-uids')?.addEventListener('click', deleteUIDs
 
   </script>
 
-<script src="js/exec_live_additive.js?v=3" defer></script>
+<script src="exec_live_additive.js?v=4" defer></script>
 
 </body>
 </html>
