--- a/ui/index.html
+++ b/ui/index.html
@@ -2059,7 +2059,7 @@ document.getElementById('btn-delete-uids')?.addEventListener('click', deleteUIDs
 
   </script>
 
-<script src="exec_live_additive.js?v=4" defer></script>
+<script src="/exec_live_additive.js?v=5" defer></script>
 
 </body>
 </html>
