--- a/ui/index.html
+++ b/ui/index.html
@@ -51,10 +51,15 @@
   margin-bottom:.75rem;
 }
 
-/* segmented toggle visuals */
-.seg { color:#9f1239; }
-.seg.active { background:#fff; color:#9f1239; box-shadow:0 1px 2px rgba(16,24,40,.04), 0 1px 3px rgba(16,24,40,.1); }
-.seg:not(.active):hover { background:rgba(225,29,72,.08); }
+/* segmented toggle visuals (neutral) */
+.seg { color:#303030; }
+.seg.active {
+  background:#fff;
+  color:#303030;
+  box-shadow:0 1px 2px rgba(16,24,40,.04), 0 1px 3px rgba(16,24,40,.1);
+}
+.seg:not(.active):hover { background: rgba(0,0,0,.06); }
+
 
 /* --- Command Bar (visual only) --- */
 .cmdbar{
@@ -80,6 +85,21 @@
 .cmd--danger{ color:#991b1b; background:#fff5f5; border-color:#fecaca; }
 .cmd--ghost{ background:transparent; }
 
+/* Override colors for Upload/Zero buttons ONLY */
+#btn-upload-plan,
+#btn-zero-plan {
+  background: #E2E2E2 !important;
+  color: #303030 !important;
+  border-color: #e5e7eb !important;
+}
+
+#btn-upload-plan:hover,
+#btn-zero-plan:hover {
+  background: #d9d9d9 !important; /* subtle hover */
+}
+
+
+
 /* icon sizing */
 .cmd svg{ width:16px; height:16px; opacity:.85; }
 
@@ -93,7 +113,7 @@
         <div class="text-xl font-semibold">VelOzity Pinpoint</div>
         <div id="vo-today" class="text-gray-500 text-sm"></div>
       </div>
-      <nav id="nav-toggle" class="inline-flex items-center gap-1 p-1 rounded-xl bg-rose-50 border border-rose-200">
+      <nav id="nav-toggle" class="inline-flex items-center gap-1 p-1 rounded-xl bg-[#E2E2E2] border border-gray-300">
 
 <a href="#exec" id="nav-exec"
    class="seg px-3 py-1.5 rounded-lg text-sm font-medium transition select-none">
