--- a/ui/index.html
+++ b/ui/index.html
@@ -123,20 +123,9 @@
      class="seg px-3 py-1.5 rounded-lg text-sm font-medium transition select-none">
     Operations
   </a>
-
-<a href="#receiving" id="nav-receiving"
-   class="seg px-3 py-1.5 rounded-lg text-sm font-medium transition select-none">
-  Receiving
-</a>
-        
   <a href="#intake" id="nav-intake"
      class="seg px-3 py-1.5 rounded-lg text-sm font-medium transition select-none">
     Intake
-  </a>
-
-  <a href="#flow" id="nav-flow"
-     class="seg px-3 py-1.5 rounded-lg text-sm font-medium transition select-none">
-    Flow
   </a>
 </nav>
     </div>
@@ -496,9 +485,6 @@ style="border-color:#990033;">
     </div>
   </div>
 </section>
-
-<!-- ================= Flow ================= -->
-<section id="page-flow" class="hidden"></section>
   </main>
 
   <!-- Footer health pill (shows Applied this week) -->
@@ -593,7 +579,7 @@ function createHeart(size=24, color=BRAND, bpm=40){
   async function fetchPlan(w){
   if(!apiBase) return [];
   try {
-    return await api(`/plan/weeks/${w}?limit=50000`);
+    return await api(`/plan/weeks/${w}?limit=500000`);
   } catch {
     return [];
   }
@@ -602,19 +588,19 @@ function createHeart(size=24, color=BRAND, bpm=40){
 async function fetchActualsAll(){
   if (!apiBase) return [];
   try {
-    const d = await api(`/records?limit=50000`);
+    const d = await api(`/records?limit=500000`);
     return d.records || [];
   } catch {
     return [];
   }
 }
-  async function fetchActuals(f,t){ if(!apiBase) return []; try{const d=await api(`/records?from=${f}&to=${t}&status=complete&limit=50000`); return d.records||[];}catch{return [];} }
+  async function fetchActuals(f,t){ if(!apiBase) return []; try{const d=await api(`/records?from=${f}&to=${t}&status=complete&limit=500000`); return d.records||[];}catch{return [];} }
 
 // --- Fetch bins for a week (business week start) ---
 async function fetchBins(ws) {
   if (!apiBase) return [];
   try {
-    const r = await api(`/bins/weeks/${ws}?limit=50000`);
+    const r = await api(`/bins/weeks/${ws}?limit=500000`);
     return Array.isArray(r) ? r : (r.bins || []);
   } catch {
     return [];
@@ -1787,7 +1773,7 @@ async function fetchActualsInWeek(ws, we) {
   if (!apiBase) return [];
   try {
     // get everything, we’ll filter locally
-    const d = await api(`/records?limit=50000`);
+    const d = await api(`/records?limit=500000`);
     const all = d.records || [];
 
     const startTs = new Date(ws + 'T00:00:00Z').getTime();
@@ -2532,7 +2518,7 @@ async function loadOpsMetrics() {
   if (!apiBase) return;
   try {
     // Fetch all recent completed records, up to 50k
-    const res = await fetch(`${apiBase}/records?status=complete&limit=50000`);
+    const res = await fetch(`${apiBase}/records?status=complete&limit=500000`);
     if (!res.ok) throw new Error(await res.text());
     const rows = (await res.json()).records || [];
 
@@ -2643,7 +2629,7 @@ async function refreshDashboardTotals(){
   const weD = new Date(ws); weD.setDate(weD.getDate() + 6);
   const we  = iso(weD);
 
-  const res = await fetch(`${apiBase}/records?limit=50000`);
+  const res = await fetch(`${apiBase}/records?limit=500000`);
   if(!res.ok) return;
   const all = (await res.json()).records || [];
 
@@ -2754,60 +2740,45 @@ function syncNav() {
   const dash   = document.getElementById('nav-dash');
   const intake = document.getElementById('nav-intake');
   const exec   = document.getElementById('nav-exec');
-  const recv   = document.getElementById('nav-receiving');
-  const flow   = document.getElementById('nav-flow');
-  if (!dash || !intake || !exec || !recv || !flow) return;
+  if (!dash || !intake || !exec) return;
 
-  [dash, intake, exec, recv, flow].forEach(el => {
+  [dash, intake, exec].forEach(el => {
     el.classList.remove('active');
     el.removeAttribute('aria-current');
   });
 
-if (hash === '#receiving') {
-  recv.classList.add('active');
-  recv.setAttribute('aria-current', 'page');
-} else if (hash === '#intake') {
-  intake.classList.add('active');
-  intake.setAttribute('aria-current', 'page');
-} else if (hash === '#exec') {
-  exec.classList.add('active');
-  exec.setAttribute('aria-current', 'page');
-} else if (hash === '#flow') {
-  flow.classList.add('active');
-  flow.setAttribute('aria-current', 'page');
-} else {
-  dash.classList.add('active');
-  dash.setAttribute('aria-current', 'page');
-}
+  if (hash === '#intake') {
+    intake.classList.add('active');
+    intake.setAttribute('aria-current', 'page');
+  } else if (hash === '#exec') {
+    exec.classList.add('active');
+    exec.setAttribute('aria-current', 'page');
+  } else {
+    dash.classList.add('active');
+    dash.setAttribute('aria-current', 'page');
+  }
 }
 
   function show(hash){
   document.getElementById('page-dashboard')?.classList.add('hidden');
   document.getElementById('page-intake')?.classList.add('hidden');
   document.getElementById('page-exec')?.classList.add('hidden');
-  document.getElementById('page-receiving')?.classList.add('hidden');
-  document.getElementById('page-flow')?.classList.add('hidden');
 
-
-if (hash === '#receiving') {
-  document.getElementById('page-receiving')?.classList.remove('hidden');
-} else if (hash === '#intake') {
-  document.getElementById('page-intake')?.classList.remove('hidden');
-} else if (hash === '#exec') {
-  document.getElementById('page-exec')?.classList.remove('hidden');
-  try {
-    const ws = state.weekStart;
-    const weD = new Date(ws); weD.setDate(weD.getDate() + 6);
-    const we = iso(weD);
-    const sub = document.getElementById('exec-sub');
-    if (sub) sub.textContent = `${ws} – ${we}`;
-  } catch {}
-} else if (hash === '#flow') {
-  document.getElementById('page-flow')?.classList.remove('hidden');
-} else {
-  document.getElementById('page-dashboard')?.classList.remove('hidden');
-}
-syncNav();
+  if (hash === '#intake') {
+    document.getElementById('page-intake')?.classList.remove('hidden');
+  } else if (hash === '#exec') {
+    document.getElementById('page-exec')?.classList.remove('hidden');
+    try {
+      const ws = state.weekStart;
+      const weD = new Date(ws); weD.setDate(weD.getDate() + 6);
+      const we = iso(weD);
+      const sub = document.getElementById('exec-sub');
+      if (sub) sub.textContent = `${ws} – ${we}`;
+    } catch {}
+  } else {
+    document.getElementById('page-dashboard')?.classList.remove('hidden');
+  }
+  syncNav();
 }
 
   window.addEventListener('hashchange', () => show(location.hash || '#dashboard'));
@@ -2873,13 +2844,11 @@ document.getElementById('btn-delete-uids')?.addEventListener('click', deleteUIDs
 
 
 <script src="/exec_live_additive.js?v=8" defer></script>
-<script src="/receiving_live_additive.js?v=27" defer></script>
-  <script src="/flow_live_additive.js?v=61" defer></script>
+<script src="/receiving_live_additive.js?v=1" defer></script>
+
 
 </body>
 </html>
-
-
 
 
 
